# lox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c
include/: array.h  builtin_table.h  builtins.h  chunk.h  common.h  compiler.h  completion.h  debug.h  hash_module.h  memory.h  method_table.h  methods.h  modules.h  native.h  object.h  offset_array.h  scanner.h  table.h  toml.h  value.h  vm.h
include/std/: crypto.h  methods.h  modules.h
include/std/crypto/: digest.h
lib/: array.c  builtin_table.c  builtins.c  chunk.c  compiler.c  debug.c  memory.c  method_table.c  object.c  offset_array.c  scanner.c  table.c  value.c  vm.c
std/: boolobject.c  builtins.c  charobject.c  classes.c  float_object.c  floatobject.c  functions.c  int_object.c  intobject.c  listobject.c  mapobject.c  methods.c  modules.c  nilobject.c  statics.c  stringobject.c
std/modules/: archive.c  archive_tar.c  compress.c  compress_brotli.c  compress_lz4.c  compress_lzf.c  compress_zlib.c  compress_zstd.c  crypto.c  db.c  fs.c  fs_file.c  hash.c  math.c  math_complex.c  process.c  random.c  regex.c  regex_match.c  serde.c  serde_json.c  serde_yaml.c  sys.c  sys_user.c  time.c  time_time.c
std/modules/archive/: archive_entry_class.c  archive_file_class.c  tar_file_class.c  (+2 more)
std/objects/: bool.c  boolobject.c  bound_method.c  bytes.c  char.c  charobject.c  class.c  closure.c  float.c  floatobject.c  function.c  instance.c  int.c  intobject.c  list.c  listobject.c  map.c  mapobject.c  module.c  native_function.c  native_struct.c  nil.c  string.c  stringobject.c  upvalue.c
(+45 files in other folders)
